variants/v00/TASK.md
# Вариант 00. «Конвертер конфигураций»

Сервис принимает конфигурации в YAML и отдаёт их другим системам. Go-часть выдаёт токены доступа. Вариант разобран в методичке как пример.

Вы — инженер по безопасности. Перед выводом сервиса в продуктивную среду нужно провести анализ
состава ПО, оценить найденные уязвимости и довести образы до прохождения security gate.
Общий порядок работы описан в [README.md](../../README.md), здесь — только особенности варианта.

## Состав

| Компонент | Каталог | Образ |
|---|---|---|
| Python-сервис | `python-app/` | `lab4/v00-py:before` |
| Go-сервис | `go-app/` | `lab4/v00-go:before` |

## Сборка исходных образов

```bash
cp -r variants/v00 ~/lab4-<фамилия>-v00 && cd ~/lab4-<фамилия>-v00
mkdir -p sbom scans
docker build -t lab4/v00-py:before python-app
docker build -t lab4/v00-go:before go-app
```

## Что нужно сделать

Подробные инструкции и примеры команд — в разделе 2 [методички](../../README.md#2-порядок-выполнения).

- [ ] Скопировать каталог варианта и собрать исходные образы (команды выше).
- [ ] **Часть 1.** Построить SBOM обоих образов в форматах syft-json, CycloneDX и SPDX; посчитать компоненты
      по типам; сравнить SBOM исходников и образа; извлечь Go-бинарь и построить SBOM по нему; сравнить слои.
- [ ] **Часть 2.** Просканировать оба SBOM grype, сохранить JSON-отчёты, составить сводку находок.
- [ ] **Часть 3.** Составить топ-10 уязвимостей по RISK для каждого образа, разобрать три уязвимости.
- [ ] **Часть 4.** Исправить `python-app/` и `go-app/`; собрать `lab4/v00-py:after` и `lab4/v00-go:after`
      без исправимых High/Critical; убедиться, что оба сервиса отвечают на `GET /health`; описать остаточный
      риск и заполнить `.grype.yaml`.
- [ ] **Часть 5.** Написать `scan.sh` и показать, что он не пропускает `:before` и пропускает `:after`.
- [ ] **Часть 6.** Ответить на индивидуальные вопросы (ниже).
- [ ] Оформить `REPORT.md` по шаблону и сдать каталог (структура — в разделе 3 методички).

## Индивидуальные вопросы

Ответы оформите в разделе 6 отчёта. Каждое утверждение подтверждайте командой и её выводом (фрагментом).

1. Разобран в методичке. Используйте его, чтобы потренироваться перед выполнением своего варианта.
