variants/v01/TASK.md
# Вариант 01. «Сервис заметок»

Сервис хранит заметки в формате Markdown: Python-часть подсвечивает фрагменты кода, фронтенд рендерит Markdown в браузере, Go-часть синхронизирует заметки по WebSocket.

Вы — инженер по безопасности. Перед выводом сервиса в продуктивную среду нужно провести анализ
состава ПО, оценить найденные уязвимости и довести образы до прохождения security gate.
Общий порядок работы описан в [README.md](../../README.md), здесь — только особенности варианта.

## Состав

| Компонент | Каталог | Образ |
|---|---|---|
| Python-сервис | `python-app/` | `lab4/v01-py:before` |
| Go-сервис | `go-app/` | `lab4/v01-go:before` |

## Сборка исходных образов

```bash
cp -r variants/v01 ~/lab4-<фамилия>-v01 && cd ~/lab4-<фамилия>-v01
mkdir -p sbom scans
docker build -t lab4/v01-py:before python-app
docker build -t lab4/v01-go:before go-app
```

## Что нужно сделать

Подробные инструкции и примеры команд — в разделе 2 [методички](../../README.md#2-порядок-выполнения).

- [ ] Скопировать каталог варианта и собрать исходные образы (команды выше).
- [ ] **Часть 1.** Построить SBOM обоих образов в форматах syft-json, CycloneDX и SPDX; посчитать компоненты
      по типам; сравнить SBOM исходников и образа; извлечь Go-бинарь и построить SBOM по нему; сравнить слои.
- [ ] **Часть 2.** Просканировать оба SBOM grype, сохранить JSON-отчёты, составить сводку находок.
- [ ] **Часть 3.** Составить топ-10 уязвимостей по RISK для каждого образа, разобрать три уязвимости.
- [ ] **Часть 4.** Исправить `python-app/` и `go-app/`; собрать `lab4/v01-py:after` и `lab4/v01-go:after`
      без исправимых High/Critical; убедиться, что оба сервиса отвечают на `GET /health`; описать остаточный
      риск и заполнить `.grype.yaml`.
- [ ] **Часть 5.** Написать `scan.sh` и показать, что он не пропускает `:before` и пропускает `:after`.
- [ ] **Часть 6.** Ответить на индивидуальные вопросы (ниже).
- [ ] Оформить `REPORT.md` по шаблону и сдать каталог (структура — в разделе 3 методички).

## Индивидуальные вопросы

Ответы оформите в разделе 6 отчёта. Каждое утверждение подтверждайте командой и её выводом (фрагментом).

1. В Dockerfile Python-сервиса «временно» ставятся отладочные инструменты. Постройте SBOM образа с `--scope squashed` и `--scope all-layers` и сравните списки Python-пакетов. Какие пакеты видны только во втором случае? Какие пакеты, установленные вместе с удалённым, остались в итоговой файловой системе?
2. Почему удаление пакета отдельной инструкцией `RUN` не убирает его из образа? Что получит злоумышленник, скачавший образ (подсказка: `docker save`)? Как правильно устанавливать временные инструменты?
3. Модуль golang.org/x/net в Go-сервисе закреплён на псевдоверсии вида `v0.0.0-2021…`. Как grype сравнивает такие версии с диапазонами уязвимостей? Найдите в отчёте уязвимость из каталога KEV и объясните, применима ли она к сервису (посмотрите, как используется пакет в `main.go`).
